Refactor: replace Collections.unmodifiableList with List.copyOf